# AnimeEffects

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README-es.md  README-ja.md  README-jp.md  README-zh.md  README.md
src/: AnimeEffects.pro  CMakeLists.txt  CMakeLists.txt.deprecated  XC.h  XCAssert.h  XCType.h  common.pri
src/cmnd/: Base.h  BasicCommands.h  CMakeLists.txt  DoneDeleter.h  Listener.h  Scalable.cpp  Scalable.h  ScopedMacro.h  ScopedUndoSuspender.h  SignalNotifier.h  SleepableObject.h  Stable.h  Stack.cpp  Stack.h  UndoneDeleter.h  Vector.h  cmnd.pro
src/core/: AbstractCursor.cpp  AbstractCursor.h  Animator.h  Bone2.cpp  Bone2.h  BoneExpans.cpp  BoneExpans.h  BoneInfluenceMap.cpp  BoneInfluenceMap.h  BoneKey.cpp  BoneKey.h  BoneKeyUpdater.cpp  BoneKeyUpdater.h  BoneShape.cpp  BoneShape.h  CMakeLists.txt  CameraInfo.cpp  CameraInfo.h  ClippingFrame.cpp  ClippingFrame.h  Constant.h  DepthKey.cpp  DepthKey.h  Deserializer.cpp  Deserializer.h  DestinationTexturizer.cpp  DestinationTexturizer.h  FFDKey.cpp  FFDKey.h  FFDKeyUpdater.cpp  FFDKeyUpdater.h  FolderNode.cpp  FolderNode.h  Frame.h  GridMesh.cpp  GridMesh.h  HSVKey.cpp  HeightMap.cpp  HeightMap.h  HsvKey.h  (+78 more)
src/ctrl/: BoneEditMode.h  BoneEditor.cpp  BoneEditor.h  BoneParam.h  CMakeLists.txt  CmndName.cpp  CmndName.h  Driver.cpp  Driver.h  DriverResources.cpp  DriverResources.h  ExportParams.cpp  ExportParams.h  ExportParams.hpp  Exporter.cpp  Exporter.h  FFDEditor.cpp  FFDEditor.h  FFDParam.h  GraphicStyle.h  IEditor.h  ImageFileLoader.cpp  ImageFileLoader.h  KeyBinding.cpp  KeyBinding.h  MeshEditor.cpp  MeshEditor.h  MeshParam.h  NewExporter.cpp  NewExporter.h  Painter.cpp  Painter.h  PoseEditMode.h  PoseEditor.cpp  PoseEditor.h  PoseParam.cpp  PoseParam.h  ProjectLoader.cpp  ProjectLoader.h  ProjectSaver.cpp  (+20 more)
src/ctrl/bone/: bone_AssignInfluence.h  bone_BindNodesMode.cpp  bone_BindNodesMode.h  bone_CreateMode.cpp  bone_CreateMode.h  bone_DeleteBone.cpp  bone_DeleteBone.h  bone_DeleteMode.cpp  bone_DeleteMode.h  bone_EraseInflMode.cpp  bone_EraseInflMode.h  bone_Focuser.cpp  bone_Focuser.h  bone_GeoBuilder.cpp  bone_GeoBuilder.h  bone_IMode.h  bone_InfluenceMode.cpp  bone_InfluenceMode.h  bone_KeyOwner.cpp  bone_KeyOwner.h  bone_MoveBone.h  bone_MoveJointMode.cpp  bone_MoveJointMode.h  bone_NodeSelector.cpp  bone_NodeSelector.h  bone_Notifier.cpp  bone_Notifier.h  bone_PaintInflMode.cpp  bone_PaintInflMode.h  bone_PushNewPoses.h  bone_PushNewTopPoses.h  bone_Renderer.cpp  bone_Renderer.h  bone_Target.h
src/ctrl/ffd/: ffd_BrushMode.cpp  ffd_BrushMode.h  ffd_DragMode.cpp  ffd_DragMode.h  ffd_IMode.h  ffd_KeyOwner.cpp  ffd_KeyOwner.h  ffd_MoveVertices.cpp  ffd_MoveVertices.h  ffd_Target.cpp  ffd_Target.h  ffd_Task.cpp  ffd_Task.h  ffd_TaskResource.cpp  ffd_TaskResource.h
src/ctrl/mesh/: mesh_CreateMode.cpp  mesh_CreateMode.h  mesh_DeleteMode.cpp  mesh_DeleteMode.h  mesh_Focuser.cpp  mesh_Focuser.h  mesh_IMode.h  mesh_KeyOwner.cpp  mesh_KeyOwner.h  mesh_MeshAccessor.cpp  mesh_MeshAccessor.h  mesh_Notifier.cpp  mesh_Notifier.h  mesh_Renderer.cpp  mesh_Renderer.h  mesh_SplitMode.cpp  mesh_SplitMode.h  mesh_Target.h  mesh_VtxMover.h
src/ctrl/pose/: pose_BoneDynamics.cpp  pose_BoneDynamics.h  pose_DrawBoneMode.cpp  pose_DrawBoneMode.h  pose_ErasePoseMode.cpp  pose_ErasePoseMode.h  pose_IMode.h  pose_KeyOwner.cpp  pose_KeyOwner.h  pose_RigidBone.cpp  pose_RigidBone.h  pose_RotateBone.h  pose_RotateBones.cpp  pose_RotateBones.h  pose_Target.h  pose_TransBoneMode.cpp  pose_TransBoneMode.h
src/ctrl/srt/: srt_IMode.h  (+11 more)
src/gl/: BufferObject.cpp  BufferObject.h  CMakeLists.txt  ComputeTexture1D.cpp  ComputeTexture1D.h  DeviceInfo.cpp  DeviceInfo.h  EasyShaderProgram.cpp  EasyShaderProgram.h  EasyTextureDrawer.cpp  EasyTextureDrawer.h  ExtendShader.cpp  ExtendShader.h  FontDrawer.cpp  FontDrawer.h  Framebuffer.cpp  Framebuffer.h  Global.cpp  Global.h  PrimitiveDrawer.cpp  PrimitiveDrawer.h  Root.cpp  Root.h  Task.cpp  Task.h  TextObject.cpp  TextObject.h  Texture.cpp  Texture.h  Triangulator.cpp  Triangulator.h  Util.cpp  Util.h  Vector2.h  Vector2I.h  Vector3.h  Vector4.h  Vector4I.h  VertexArrayObject.cpp  VertexArrayObject.h  (+1 more)
src/gui/: AudioPlaybackWidget.cpp  AudioPlaybackWidget.h  CMakeLists.txt  CanvasMover.cpp  CanvasMover.h  DriverHolder.cpp  DriverHolder.h  EasyDialog.cpp  EasyDialog.h  ExportDialog.cpp  ExportDialog.h  GUIResources.cpp  GUIResources.h  GeneralSettingDialog.cpp  GeneralSettingDialog.h  KeyBindingDialog.cpp  KeyBindingDialog.h  KeyCommandInvoker.cpp  KeyCommandInvoker.h  KeyCommandMap.cpp  KeyCommandMap.h  LocaleDecider.cpp  LocaleDecider.h  LocaleParam.h  MSVCBackTracer.cpp  MSVCBackTracer.h  MSVCMemoryLeakDebugger.cpp  MSVCMemoryLeakDebugger.h  Main.cpp  MainDisplayMode.h  MainDisplayStyle.h  MainDisplayWidget.cpp  MainDisplayWidget.h  MainMenuBar.cpp  MainMenuBar.h  MainViewSetting.h  MainWindow.cpp  MainWindow.h  MouseSetting.cpp  MouseSetting.h  (+34 more)
src/img/: BlendMode.cpp  BlendMode.h  BlendModeName.cpp  BlendModeName.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ColorRGBA.h  Format.h  GridMeshCreator.cpp  GridMeshCreator.h  ORAReader.h  PSDFormat.h  PSDReader.cpp  PSDReader.h  PSDUtil.cpp  PSDUtil.h  PSDWriter.cpp  PSDWriter.h  PixelPos.h  Quad.h  ResourceData.cpp  ResourceData.h  ResourceHandle.cpp  ResourceHandle.h  ResourceNode.cpp  ResourceNode.h  Util.cpp  Util.h  img.pro
src/thr/: CMakeLists.txt  Paralleler.cpp  Paralleler.h  Task.cpp  Task.h  TaskQueue.cpp  TaskQueue.h  Worker.cpp  Worker.h  thr.pro
src/util/: ArrayBlock.h  ArrayBuffer.h  BinarySpacePartition2D.h  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Circle.h  CollDetect.cpp  CollDetect.h  DealtList.h  Dir4.cpp  Dir4.h  Easing.cpp  Easing.h  EasingName.cpp  EasingName.h  FergusonCoonsSpline.h  Finally.h  FixedObject.h  IDAssigner.h  IDSolver.h  IEasyIterator.h  IProgressReporter.h  ITreeSeeker.h  IndexTable.cpp  IndexTable.h  LifeLink.h  LinkPointer.h  MathUtil.cpp  MathUtil.h  NetworkUtil.cpp  NetworkUtil.h  NonCopyable.h  PackBits.cpp  PackBits.h  PlacePointer.h  Range.h  Segment2D.h  SelectArgs.h  Signaler.h  (+19 more)
(+129 files in other folders)
